grammar.js
    source_file: $ =>
      repeat(
        choice(
          // Newlines and whitespace are always acceptable, but can't be put
          // in `extras` because there needs to be explicit control over whitespace
          // for some rules.
          /\s/,
          // Comments take a whole line
          $.comment,
          // Directives must be on their own lines
          $._directive,
        ),
      ),

    _directive: $ =>
      seq(
        choice(...[...defined_directives].map(rule_name => $[rule_name])),
        optional(INLINE_WHITESPACE),
        optional("\n"),
      ),

    // BEGIN DIRECTIVES
    // Accesses to the magic `directive` object register the directive so
    // it can't get out of sync with the `_directive` rule.
    // Calling `directive` is a whitespace-separated sequence. The directive
    // name must come first. All directive names must be valid and can only be
    // used once. Using an array indicates an optional sequence.

    [directive.include]: $ => directive("include", $.string),

    [directive.globinclude]: $ => directive("globinclude", $.glob_pattern),

    // TODO: This can also use globs
    [directive.envinclude]: $ => directive("envinclude", $.glob_pattern),

    [directive.font_size]: $ => directive("font_size", $.float),

    [directive.font_family]: $ =>
      directive("font_family", choice($.string, $.auto)),

    [directive.bold_font]: $ =>
      directive("bold_font", choice($.string, $.auto)),

    [directive.italic_font]: $ =>
      directive("italic_font", choice($.string, $.auto)),

    [directive.bold_italic_font]: $ =>
      directive("bold_italic_font", choice($.string, $.auto)),

    [directive.force_ltr]: $ => directive("force_ltr", $.boolean),

    [directive.bell_on_tab]: $ =>
      directive("bell_on_tab", choice($.string, $.boolean, $.none)),

    [directive.enable_audio_bell]: $ =>
      directive("enable_audio_bell", $.boolean),

    [directive.visual_bell_duration]: $ =>
      directive("visual_bell_duration", $.float),

    [directive.visual_bell_color]: $ =>
      directive("visual_bell_color", choice($.hex_color, $.none)),

    [directive.window_alert_on_bell]: $ =>
      directive("window_alert_on_bell", $.boolean),

    [directive.command_on_bell]: $ =>
      directive("command_on_bell", choice($.boolean, $.none)),

    [directive.bell_path]: $ =>
      directive("bell_path", choice($.string, $.none)),

    [directive.symbol_map]: $ =>
      directive("symbol_map", $.codepoints, $.string),

    [directive.narrow_symbols]: $ =>
      directive("narrow_symbols", $.codepoints, [$.int]),

    [directive.disable_ligatures]: $ =>
      directive("disable_ligatures", $.disable_ligatures_value),
    font_modification_type: $ =>
      choice(
        "underline_position",
        "underline_thickness",
        "strikethrough_position",
        "strikethrough_thickness",
        "cell_width",
        "cell_height",
        "baseline",
        "size",
      ),

    [directive.box_drawing_scale]: $ =>
      directive(
        "box_drawing_scale",
        seq(
          field("thin", $.float),
          optional(token.immediate(INLINE_WHITESPACE)),
          ",",
          optional(token.immediate(INLINE_WHITESPACE)),
          field("normal", $.float),
          optional(token.immediate(INLINE_WHITESPACE)),
          ",",
          optional(token.immediate(INLINE_WHITESPACE)),
          field("thick", $.float),
          optional(token.immediate(INLINE_WHITESPACE)),
          ",",
          optional(token.immediate(INLINE_WHITESPACE)),
          field("very_thick", $.float),
        ),
      ),

    [directive.undercurl_style]: $ =>
      directive("undercurl_style", $.undercurl_style_value),
    scrollback_pager_value: $ =>
      repeat1(
        choice(
          $.scrollback_pager_keyword,
          alias($._scrollback_pager_anything_but_keyword, $.string_part),
        ),
      ),
    scrollback_pager_keyword: $ => choice(...SCROLLBACK_PAGER_KEYWORDS),
    // HACK: this regex will match any character, then any character that cannot start a keyword.
    // There's no other way to exclude matches without either writing an external parser right now.
    // (This array is small enough that this will always be faster than constructing a set)
    // TODO: Rewrite this to use an external parser instead of a hack
    _scrollback_pager_anything_but_keyword: $ =>
      new RegExp(
        `.[^${SCROLLBACK_PAGER_KEYWORDS.map(str => str[0])
          .filter((char, index, arr) => arr.indexOf(char) === index)
          .join("")}]*`,
      ),

    [directive.scrollback_pager_history_size]: $ =>
      directive("scrollback_pager_history_size", $.signed_int),

    [directive.scrollback_fill_enlarged_window]: $ =>
      directive("scrollback_fill_enlarged_window", $.boolean),

    [directive.wheel_scroll_multiplier]: $ =>
      directive("wheel_scroll_multiplier", $.signed_float),

    [directive.wheel_scroll_min_lines]: $ =>
      directive("wheel_scroll_min_lines", $.signed_int),

    [directive.touch_scroll_multiplier]: $ =>
      directive("touch_scroll_multiplier", $.signed_float),

    [directive.mouse_hide_wait]: $ =>
      directive("mouse_hide_wait", $.signed_float),

    [directive.url_color]: $ => directive("url_color", $.hex_color),
    [directive.url_style]: $ =>
      directive("url_style", choice($.url_style_value, $.none)),
    codepoints: $ =>
      seq(
        choice($.unicode_codepoint, $.unicode_range),
        repeat(seq(",", choice($.unicode_codepoint, $.unicode_range))),
      ),
    unicode_range: $ =>
      seq(
        field("start", $.unicode_codepoint),
        "-",
        field("end", $.unicode_codepoint),
      ),
    unicode_codepoint: $ => /U\+[A-Fa-f0-9]+/,

    // Keeping this here so I remember to uncomment it if required

    sign: $ => choice("+", "-"),
    signed_float: $ =>
      seq(field("sign", optional($.sign)), field("number", $.float)),
    signed_int: $ =>
      seq(field("sign", optional($.sign)), field("number", $.int)),

    // Mostly from the Python grammar because Kitty uses Python's `float`
    // to parse numbers. `float` has slightly different syntax to the literal
    // syntax, so that's why it's not the exact same.
    float: $ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);
      return token(
        choice(
          digits,
          seq(digits, ".", optional(digits), optional(exponent)),
          seq(optional(digits), ".", digits, optional(exponent)),
          seq(digits, exponent),
        ),
      );
    },
    int: $ => repeat1(/[0-9]+_?/),
    glob_pattern: $ =>
      repeat1(
        choice(
          $.glob_pattern_star,
          $.glob_pattern_qmark,
          $.glob_pattern_literal,
          $.glob_pattern_literal_glob_op,
          $.glob_pattern_seq,
        ),
      ),
    glob_pattern_star: $ => "*",
    glob_pattern_literal: $ => /[^\*\?\[]+/,

    string: $ => /\S.+/,
