corpus/globinclude.txt
==================
globinclude string
==================

globinclude kitty.d/**/*.conf

---

(source_file
  (globinclude
    (glob_pattern
      (glob_pattern_literal)
      (glob_pattern_star)
      (glob_pattern_star)
      (glob_pattern_literal)
      (glob_pattern_star)
      (glob_pattern_literal))))
